# thorvg-cython

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: cibuildwheel.yml  cibuildwheel_tests.yml  full-test_suite.yml  github-release.yml  on_release.yml  pypi-publish.yml  python-package.yml
ci/: prepare_thorvg_windows.bat
examples/kivy/: CustomSVGInstructions.py  kivy0.py  kivy_lottie.py  kivy_svg_file.py  kivy_svg_grid.py  kivy_svg_inline.py  kivy_svg_kv.py  kivy_svg_transform.py  lottie.json  lottie_widget.py  multi_lotties.py  test_lottie.py
research/tests/: python-ios.md
src/thorvg_cython/: __init__.py  cthorvg.pxd  gl_canvas.pxd  gl_canvas.py  gl_canvas.pyi  gl_canvas.pyx  sw_canvas.pxd  sw_canvas.pyi  sw_canvas.pyx  thorvg.pxd  thorvg.pyi  thorvg.pyx
tests/: conftest.py  preload.py  test_canvas.py  test_engine.py  test_gradient.py  test_pixelbuffer.py  test_shape.py
tools/: add-ios-frameworks.py  build-apple-wheels.sh  build_thorvg.py  ios_testbench.py
tools/cross/: android_aarch64.txt  android_x86_64.txt
tools/patches/: tvgGl_angle_macos.patch
tools/thorvg_scripts/: build_android.sh  build_apple.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_windows.bat  download_angle.sh
