[build-system]
requires = ["setuptools>=68", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thorvg-cython"
version = "0.0.3"
description = "Cython bindings for the ThorVG vector graphics library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest", "cibuildwheel", "meson", "ninja"]

# ---------------------------------------------------------------------------
#  cibuildwheel configuration
#
#  Downloads thorvg release source tarball (not git clone).
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
skip = "pp* *-musllinux_i686"
environment = { THORVG_ROOT = "thorvg", THORVG_VERSION = "1.0.1" }
test-requires = ["pytest"]
test-command = "pytest {project}/tests -v"


[tool.cibuildwheel.linux]
before-all = "python {project}/tools/build_thorvg.py linux --thorvg-root={project}/thorvg --version=$THORVG_VERSION"
environment = { THORVG_ROOT = "thorvg", THORVG_VERSION = "1.0.1", THORVG_LIB_DIR = "thorvg/output/linux_x86_64" }

[tool.cibuildwheel.macos]
before-all = "python {project}/tools/build_thorvg.py macos --thorvg-root={project}/thorvg --version=$THORVG_VERSION"
environment = { THORVG_ROOT = "thorvg", THORVG_VERSION = "1.0.1", THORVG_LIB_DIR = "thorvg/output/macos_fat", ANGLE_LIB_DIR = "thorvg/output/angle", MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
before-all = "python {project}\\tools\\build_thorvg.py windows --thorvg-root={project}\\thorvg --version=%THORVG_VERSION%"
environment = { THORVG_ROOT = "thorvg", THORVG_VERSION = "1.0.1", THORVG_LIB_DIR = "thorvg/output/windows_x64" }

[tool.cibuildwheel.ios]
before-all = "python {project}/tools/build_thorvg.py ios --thorvg-root={project}/thorvg --version=$THORVG_VERSION"
xbuild-tools = ["ninja"]
environment = { THORVG_ROOT = "thorvg", THORVG_VERSION = "1.0.1", THORVG_LIB_DIR = "thorvg/output/ios_arm64", ANGLE_XCFRAMEWORK_DIR = "thorvg/output/angle" }
test-sources = ["tests"]
test-command = "python -m pytest ./tests -v"

[tool.cibuildwheel.android]
before-all = "python {project}/tools/build_thorvg.py android --thorvg-root={project}/thorvg --version=$THORVG_VERSION"
# The host app (Gradle project) is responsible for providing libc++_shared.so.
# Skip cibuildwheel's default repair which tries to bundle it.
# repair-wheel-command = "cp {wheel} {dest_dir}/"
environment = { THORVG_ROOT = "thorvg", THORVG_VERSION = "1.0.1", THORVG_LIB_DIR = "thorvg/output", ANDROID_API_LEVEL = "24" }
test-sources = ["tests"]
test-command = "python -m pytest ./tests -v"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
