[build-system]
requires = ["setuptools>=68", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thorvg-cython"
version = "0.0.2"
description = "Cython bindings for the ThorVG vector graphics library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest", "cibuildwheel", "meson", "ninja"]

# ---------------------------------------------------------------------------
#  cibuildwheel configuration
#
#  Downloads thorvg release source tarball (not git clone).
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
skip = "pp* *-musllinux_i686"
environment = { THORVG_ROOT = "thorvg", THORVG_VERSION = "1.0.1" }
test-requires = ["pytest"]
test-command = "pytest {project}/tests -v"


[tool.cibuildwheel.linux]
before-all = "python {project}/tools/build_thorvg.py linux --thorvg-root={project}/thorvg --version=$THORVG_VERSION"
# auditwheel needs to find the versioned SONAME (libthorvg-1.so.1) at repair time
repair-wheel-command = "LD_LIBRARY_PATH={project}/thorvg/output/linux_x86_64 auditwheel repair -w {dest_dir} {wheel}"
environment = { THORVG_ROOT = "thorvg", THORVG_VERSION = "1.0.1", THORVG_LIB_DIR = "thorvg/output/linux_x86_64" }

[tool.cibuildwheel.macos]
before-all = "python {project}/tools/build_thorvg.py macos --thorvg-root={project}/thorvg --version=$THORVG_VERSION"
environment = { THORVG_ROOT = "thorvg", THORVG_VERSION = "1.0.1", THORVG_LIB_DIR = "thorvg/output/macos_fat", ANGLE_LIB_DIR = "thorvg/output/angle", MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
before-all = "python {project}\\tools\\build_thorvg.py windows --thorvg-root={project}\\thorvg --version=%THORVG_VERSION%"
environment = { THORVG_ROOT = "thorvg", THORVG_VERSION = "1.0.1", THORVG_LIB_DIR = "thorvg/output/windows_x64" }

[tool.cibuildwheel.ios]
before-all = "python3 {project}/tools/build_thorvg.py ios --thorvg-root={project}/thorvg --version=$THORVG_VERSION"
xbuild-tools = ["ninja"]
environment = { THORVG_ROOT = "thorvg", THORVG_VERSION = "1.0.1", THORVG_LIB_DIR = "thorvg/output/ios_arm64", ANGLE_XCFRAMEWORK_DIR = "thorvg/output/angle" }
test-sources = ["tests"]
test-command = ""

[tool.cibuildwheel.android]
before-all = "python3 {project}/tools/build_thorvg.py android --thorvg-root={project}/thorvg --version=$THORVG_VERSION"
# The host app (Gradle project) bundles libc++_shared.so at runtime.
# Default repair handles it fine; tests/preload.py pre-loads libthorvg
# via ctypes to work around Android's classloader-namespace.
#repair-wheel-command = "cp {wheel} {dest_dir}/"
environment = { THORVG_ROOT = "thorvg", THORVG_VERSION = "1.0.1", THORVG_LIB_DIR = "thorvg/output", ANDROID_API_LEVEL = "24" }
test-sources = ["tests"]
# Extensions find libthorvg-1.so via $ORIGIN rpath (DT_RPATH, see setup.py)
# — same mechanism as desktop Linux; no LD_LIBRARY_PATH workaround needed.
test-command = "python -m pytest ./tests -v"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
